fix: spacing on taxExample, moved taxPic -1 zindex, and moved margin -100 to overlap

--- a/src/components/SelectedWork/Tax/TaxExamples/MacExample/MacExample.module.css
+++ b/src/components/SelectedWork/Tax/TaxExamples/MacExample/MacExample.module.css
@@ -3,8 +3,9 @@
     width: 50%;
     position: relative;
     display: flex;
-    margin: auto;
     flex-shrink: 0; 
+    margin-left: 1rem;
+
 }
 
 
