--- a/src/components/SelectedWork/Tax/TaxExamples/TaxExamples.module.css
+++ b/src/components/SelectedWork/Tax/TaxExamples/TaxExamples.module.css
@@ -6,24 +6,23 @@ position: relative;
 display: flex;
 align-items: center;
 justify-content: center;
-gap: 54px;
 flex-direction: row;
-
+margin-bottom: 3rem;
 }
 
 .pictureDiv {
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin-left: -10rem;
 }
 
 
 /* top picture */
-.find{
+.taxPic{
 
-    width: 75%;
-    
+    width: 90%;
+    z-index: -1;
 }
 
 
